One last note for vows

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -687,6 +687,7 @@ end
           </section>
           <section>
             <h2>vows</h2>
+            <p>Designed for async/parallel tests in node.</p>
             <pre><code>
   vows.describe('The Good Things').addBatch({
       'A banana': {
