Last minute tweaks

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -139,6 +139,7 @@
               </li>
             </ul>
             <aside class="notes">
+              <p>To bring this back to the brakes analogy, if it takes you longer to build the brakes than iterate on the car, then it might not be worth it. Especially if you are going to throw away the brakes in a bit for a re-factor.
               <p>Once again, try out the variations and learn.</p>
               <p>Personal note: In the node.js world, if I begin testing internals, I consider it a smell and abstract those internals into another module.</p>
             </aside>
@@ -848,6 +849,10 @@ define([
             <small><a href="http://wolfsn.com/utahjs.html">http://wolfsn.com/utahjs.html</a></small>
 <!--             <small><a href="http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html">http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html</a></small>
  -->          </p>
+          <aside class="notes">
+            <p>Lastly, don't forget why cars have brakes.</p>
+            <p>Thank you.</p>
+          </aside>
         </section>
 
       </div>
