--- a/uber/index.html
+++ b/uber/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Behavioral driven development and the future</title>
+    <title>The Evolution of Behavioral Driven Development</title>
 
     <meta name="description" content="A chronological tale of how automated testing has evolved over time.">
     <meta name="author" content="Todd Wolfson">
@@ -38,24 +38,61 @@
       <div class="slides">
 
         <section>
-          <h1>Behavioral driven development and the future</h1>
-          <h3>The evolution of Automated Testing</h3>
+          <h1>The Evolution of Behavioral Driven Development</h1>
           <p>
             <small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
           </p>
-          <p>
-            <small><a href="http://wolfsn.com/utahjs.html">http://wolfsn.com/utahjs.html</a></small>
-<!--             <small><a href="http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html">http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html</a></small>
- -->          </p>
         </section>
 
         <section>
-          <h2>Live coding</h2>
-          <h3>BDD Example</h3>
+          <section>
+            <h2>BDD Example</h2>
+          </section>
+          <section>
+            <h2>BDD Example</h2>
+            <pre><code>function Calculator() {
+  this.sum = 0;
+}
 
-          <aside class="notes">
-            Backup can be found <a href="code/backups/intro">here</a>.
-          </aside>
+Calculator.prototype = {
+  add: function (num) {
+    this.sum += num;
+    return this;
+  },
+  total: function () {
+    return this.sum;
+  }
+};
+
+module.exports = Calculator;</code></pre>
+          </section>
+          <section>
+            <h2>BDD Example</h2>
+            <pre><code>var assert = require('assert'),
+    Calculator = require('./calculator.js');
+
+describe('A calculator', function () {
+  before(function () {
+    this.calc = new Calculator();
+  });
+
+  it('has a total of 0', function () {
+    var total = this.calc.total();
+    assert.strictEqual(total, 0);
+  });
+
+  describe('adding 2 and 3', function () {
+    before(function () {
+      this.calc.add(2).add(3);
+    });
+
+    it('has a total of 5', function () {
+      var total = this.calc.total();
+      assert.strictEqual(total, 5);
+    });
+  });
+});</code></pre>
+          </section>
         </section>
 
         <section>
