Added meme and thinned out slides

--- a/uber/index.html
+++ b/uber/index.html
@@ -92,6 +92,7 @@ describe('A calculator', function () {
     });
   });
 });</code></pre>
+            <small>(Sorry about the scrolling)</small>
           </section>
         </section>
 
@@ -196,8 +197,8 @@ describe('A calculator', function () {
             <h2>Manual testing</h2>
             <p><img alt="IBM logo" src="img/IBM_logo.jpg"/></p>
             <ul>
-              <li>Manually cross-check results</li>
-              <li>Have people poke at program until it breaks</li>
+              <li>Cross-checking results</li>
+              <li>Quality assurance engineers</li>
             </ul>
           </section>
         </section>
@@ -210,9 +211,9 @@ describe('A calculator', function () {
             <h2>SUnit (1994)</h2>
             <p><img alt="Kent Beck" src="img/xq10bqclqpsezgerjxhi.jpeg"/></p>
             <ul>
-              <li>Kent Beck working mainly in Smalltalk.</li>
-              <li>Tried out a few experiments and not quite settled.</li>
-              <li>On a consulting gig, converted latest &ldquo;workspace&rdquo; concept into classical concept.</li>
+              <li>Kent Beck working in Smalltalk</li>
+              <li>Created various experiments</li>
+              <li>While consulting, converted latest concept into classical concept</li>
             </ul>
           </section>
           <section>
@@ -249,8 +250,8 @@ describe('A calculator', function () {
             <h2>JUnit (1995 - 2000)</h2>
             <p><img alt="JUnit logo" src="img/junit1.gif"/></p>
             <ul>
-              <li>In 1995, Kent Beck and Erich Gamma invent JUnit on plane ride to OopsLa.</li>
-              <li>In 2000, junit.org is registered and published to Sourceforge.</li>
+              <li>1995, Kent Beck and Erich Gamma going to OopsLa</li>
+              <li>2000, junit.org is registered and Sourceforge'd</li>
             </ul>
             <aside class="notes">
               <p>More backstory</p>
@@ -286,7 +287,6 @@ describe('A calculator', function () {
   suite.addTest(new MoneyTest("testSimpleAdd"));
   TestResult result= suite.run();
             </code></pre>
-            <small>(Sorry about the scrolling)</small>
           </section>
         </section>
 
@@ -298,6 +298,13 @@ describe('A calculator', function () {
             <h2>Dan North (2006)</h2>
             <p><img alt="Dan North" src="img/dan-north-portrait-e1344962419273.jpg"/></p>
             <p> Wants to convert agile story template into scenarios<p>
+          </section>
+          <section>
+            <h2>Dan North (2006)</h2>
+            <p><img alt="Push it somewhere else" src="img/4ee6b9e1186133274300191d.jpg"/></p>
+          </section>
+          <section>
+            <h2>Dan North (2006)</h2>
             <blockquote>
               <p>As a [X]</p>
               <p>I want [Y]</p>
@@ -308,22 +315,20 @@ describe('A calculator', function () {
               <p>When an event occurs,</p>
               <p>then ensure some outcomes.</p>
             </blockquote>
-
             <aside class="notes">
               For the record, things were happening between 2000 and 2006. Lots of books were being published and TDD was becoming more and more known.
             </aside>
+
           </section>
           <section>
             <h2>Dan North (2006)</h2>
-            <p>Inside of blog posts, already outlining features and benefits. Even has the name BDD already.</p>
+            <p>Outlining features and benefits in blog posts.</p>
+            <p>Even has the name BDD already.</p>
             <blockquote style="text-align: left; font-style: none;">
               <p><em>Given</em> the account is in credit</p>
               <p><em>And</em> the card is valid</p>
-              <p><em>And</em> the dispenser contains cash</p>
               <p><em>When</em> the customer requests cash</p>
               <p><em>Then</em> ensure the account is debited</p>
-              <p><em>And</em> ensure cash is dispensed</p>
-              <p><em>And</em> ensure the card is returned</p>
             </blockquote>
           </section>
           <section>
