Adding in more images

--- a/uber/index.html
+++ b/uber/index.html
@@ -94,6 +94,10 @@ describe('A calculator', function () {
 });</code></pre>
             <small>(Sorry about the scrolling)</small>
           </section>
+          <section>
+            <h2>BDD Example</h2>
+            <p><img alt="Successful tests with nyan reporter" src="img/nyan_mocha.png"/></p>
+          </section>
         </section>
 
         <section>
@@ -126,6 +130,9 @@ describe('A calculator', function () {
             <h3>Time to unlearn misconceptions</h3>
           </section>
           <section>
+            <p><img alt="Sudden clarity clarence" src="img/3a0.jpg"/></p>
+          </section>
+          <section>
             <h2>What are TDD and BDD?</h2>
             <ul>
               <li>Automated verification</li>
@@ -152,7 +159,9 @@ describe('A calculator', function () {
             <h2>Code coverage</h2>
             <ul>
               <li>Code coverage = % code is touched during testing</li>
+              <br/>
               <li>In some cases, 100% is good to have</li>
+              <br/>
               <li>In other situations, lower coverage is appropriate</li>
             </ul>
             <aside class="notes">
