Adjusting more slides

--- a/uber/index.html
+++ b/uber/index.html
@@ -194,7 +194,7 @@ describe('A calculator', function () {
             </ul>
           </section>
           <section>
-            <h2>&lt;/rant&gt;</h2>
+            <p><img alt="Nyan cat" src="img/nyan_cat.gif"/></p>
           </section>
         </section>
 
@@ -322,7 +322,7 @@ describe('A calculator', function () {
             <blockquote>
               <p>Given some initial context,</p>
               <p>When an event occurs,</p>
-              <p>then ensure some outcomes.</p>
+              <p>Then ensure some outcomes.</p>
             </blockquote>
             <aside class="notes">
               For the record, things were happening between 2000 and 2006. Lots of books were being published and TDD was becoming more and more known.
@@ -402,7 +402,6 @@ describe('A calculator', function () {
           </section>
           <section>
             <h2>RSpec (2006)</h2>
-            <p>Very indicative of current mocha implementation</p>
             <pre><code>
   describe Hash do
     before(:each) do
@@ -423,9 +422,8 @@ describe('A calculator', function () {
             <h2>Cucumber (2008)</h2>
             <p><img alt="Cucumber logo" src="img/cucumber-logo.png"/></p>
             <ul>
-              <li>Released as a gem by Aslak Helles&oslash;y</li>
-              <li>First framework to separate specification from implementation.</li>
-              <li>Re-embraces Agile/XP story template</li>
+              <li>Gem by Aslak Helles&oslash;y</li>
+              <li>First to separate specification from implementation</li>
             </ul>
           </section>
           <section>
@@ -465,7 +463,7 @@ end
             <ul>
               <li>Tests represented as input/output files</li>
               <br/>
-              <li>Language agnostic since they require a framework to run with</li>
+              <li>Language and framework agnostic</li>
               <br/>
               <li>
                 <p>In the words of substack:</p>
