Last minute touchups

--- a/uber/index.html
+++ b/uber/index.html
@@ -38,7 +38,7 @@
       <div class="slides">
 
         <section>
-          <h1>The Evolution of Behavioral Driven Development</h1>
+          <h1>The Evolution of <nobr>Behavioral</nobr> Driven Development</h1>
           <p>
             <small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
           </p>
@@ -143,9 +143,7 @@ describe('A calculator', function () {
             <h2>Test-first vs test-later</h2>
             <ul>
               <li>Unrelated to TDD and BDD</lI>
-              <br/>
               <li>In some situations, test-first is appropriate</li>
-              <br/>
               <li>In others, test-later is appropriate</li>
             </ul>
             <aside class="notes">
@@ -159,9 +157,7 @@ describe('A calculator', function () {
             <h2>Code coverage</h2>
             <ul>
               <li>Code coverage = % code is touched during testing</li>
-              <br/>
               <li>In some cases, 100% is good to have</li>
-              <br/>
               <li>In other situations, lower coverage is appropriate</li>
             </ul>
             <aside class="notes">
@@ -177,19 +173,13 @@ describe('A calculator', function () {
             <h2>Implementation vs Methodology</h2>
             <ul>
               <li>
-                Once again, TDD/BDD are formats of tests.
-              </li>
-              <br/>
-              <li>
                 PhantomJS is a testing harness for manipulating a browser.
               </li>
-              <br/>
               <li>
-                CasperJS is a combination of testing framework (TDD) and harness.
+                CasperJS is a combo of a framework (TDD) and harness.
               </li>
-              <br/>
               <li>
-                Selenium is a combination of testing framework (TDD), runner, and harness.
+                Selenium is a test runner, harness, and framework.
               </li>
             </ul>
           </section>
@@ -865,7 +855,7 @@ module.exports = Calculator;</code></pre>
         </section>
 
         <section>
-          <h1>The Evolution of Behavioral Driven Development</h1>
+          <h1>The Evolution of <nobr>Behavioral</nobr> Driven Development</h1>
           <p>
             <small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
           </p>
