One more touchup

--- a/uber/index.html
+++ b/uber/index.html
@@ -249,7 +249,7 @@ describe('A calculator', function () {
             <h2>JUnit (1995 - 2000)</h2>
             <p><img alt="JUnit logo" src="img/junit1.gif"/></p>
             <ul>
-              <li>1995, Kent Beck and Erich Gamma going to OopsLa</li>
+              <li>1995, Kent Beck and Erich Gamma</li>
               <li>2000, junit.org is registered and Sourceforge'd</li>
             </ul>
             <aside class="notes">
