Updated select page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<script>window.location = 'utahjs/index.html';</script>
-<div>Redirecting you to <a href="utahjs/index.html">utahjs/index.html</a></div>
+<h1>Behavioral Driven Development and the Future</h1>
+<h2>Presentations</h2>
+<p><a href="utahjs/">Utah JS presentation</a> - 60 minutes</p>
+<p><a href="uber/">Uber presentation</a> - 30 minutes</p>
